# torchtune-finetuning

./: .gitignore  README.md  configuring_datasets_for_finetuning.ipynb  e2e_torchtune_workflow.ipynb  finetuning_llama2.ipynb  finetuning_llama3_chatdata.ipynb  pyproject.toml  torchtune_overview.py  train.sh
configs/: custom_eval_config.yaml  custom_lora.yaml
