[tool.poetry]
name = "torchtune-finetuning"
version = "0.1.0"
description = ""
authors = ["Ibrahim Ouedraogo <ibrahim.ouedraogo@umontreal.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torchtune = "^0.2.1"
torch = "^2.4.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"
lm-eval = "^0.4.3"
wandb = "^0.17.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
